hphp/hack/test/typecheck/is_expression/dict.php.like_types.exp
File "dict.php", line 6, characters 18-19:
Invalid argument (Typing[4110])
File "dict.php", line 25, characters 23-39:
Expected ~dict<int, string> because it is an unenforceable type
File "dict.php", line 4, characters 13-16:
But got dict<arraykey, mixed>
File "dict.php", line 4, characters 13-16:
The type dict expects 2 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 11, characters 22-25:
Definition is here
File "dict.php", line 13, characters 18-19:
Invalid argument (Typing[4110])
File "dict.php", line 25, characters 23-39:
Expected ~dict<int, string> because it is an unenforceable type
File "dict.php", line 11, characters 13-22:
But got dict<arraykey, mixed>
